logs/dag_id=user_table/run_id=manual__2022-06-15T09:30:34.689320+00:00/task_id=create_table/attempt=2.log
[2022-06-15 09:32:39,693] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_table.create_table manual__2022-06-15T09:30:34.689320+00:00 [queued]>
[2022-06-15 09:32:39,748] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_table.create_table manual__2022-06-15T09:30:34.689320+00:00 [queued]>
[2022-06-15 09:32:39,752] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 09:32:39,760] {taskinstance.py:1357} INFO - Starting attempt 2 of 2
[2022-06-15 09:32:39,761] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 09:32:39,859] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_table> on 2022-06-15 09:30:34.689320+00:00
[2022-06-15 09:32:39,871] {standard_task_runner.py:52} INFO - Started process 10554 to run task
[2022-06-15 09:32:39,899] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'user_table', 'create_table', 'manual__2022-06-15T09:30:34.689320+00:00', '--job-id', '96', '--raw', '--subdir', 'DAGS_FOLDER/user.py', '--cfg-path', '/tmp/tmpk5psj_b3', '--error-file', '/tmp/tmp5avjel7v']
[2022-06-15 09:32:39,906] {standard_task_runner.py:80} INFO - Job 96: Subtask create_table
[2022-06-15 09:32:40,094] {task_command.py:370} INFO - Running <TaskInstance: user_table.create_table manual__2022-06-15T09:30:34.689320+00:00 [running]> on host cfddca254c64
[2022-06-15 09:32:40,595] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_table
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-06-15T09:30:34.689320+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-15T09:30:34.689320+00:00
[2022-06-15 09:32:40,655] {base.py:68} INFO - Using connection ID 'testing' for task execution.
[2022-06-15 09:32:40,716] {dbapi.py:213} INFO - Running statement: 
        DROP TABLE IF EXISTS z1_user;
        CREATE TABLE z1_user(
            name VARCHAR(255),
            phonenumber VARCHAR(255),
            email NOT NULL VARCHAR(255) PRIMARY KEY,
            address VARCHAR(255),
            work VARCHAR(255),
            other VARCHAR(255),
        ) 
        , parameters: None
[2022-06-15 09:32:40,728] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "NOT"
LINE 6:             email NOT NULL VARCHAR(255) PRIMARY KEY,
                          ^

[2022-06-15 09:32:40,777] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=user_table, task_id=create_table, execution_date=20220615T093034, start_date=20220615T093239, end_date=20220615T093240
[2022-06-15 09:32:40,878] {standard_task_runner.py:97} ERROR - Failed to execute job 96 for task create_table (syntax error at or near "NOT"
LINE 6:             email NOT NULL VARCHAR(255) PRIMARY KEY,
                          ^
; 10554)
[2022-06-15 09:32:41,000] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-15 09:32:41,262] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
